# OpenControl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FAQ.md  Install.cmd  Install.ps1  Makefile  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  Verify.ps1  build.cmd  build.rs  release.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  python-test.yml  release.yml
docs/setup/: CLAUDE-DESKTOP.md  CURSOR.md  README.md  VSCODE.md
examples/: mcp.json
scripts/: release.ps1
src/: blocklist.rs  interrupt.rs  lib.rs  main.rs  protocol.rs  uia.rs  worker.rs
src/capture/: desktop.rs  mod.rs  redact.rs  wgc.rs
src/input/: keysym.rs  mod.rs
src/system/: installed.rs  mod.rs  sys.rs  winutil.rs
src/vision/: mod.rs  ocr.rs
tests/: benchmark_mcp.py  integration_test.rs  mcp_rust_test.py  redaction-smoke.ps1  smoke-test.ps1  test_opencontrol.py
